--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
 
-    <title>Lokesh Ravichandran | Portfolio</title>
+    <title>Suman Mandava | Portfolio</title>
     <meta charset="utf-8" />
     <meta property="og:title" content="   Lokesh | Portfolio">
     <meta name="keywords" content="   Lokesh, ,Code  ,Portfolio    Lokesh,Freelance website developer">
