--- a/public/index.html
+++ b/public/index.html
@@ -11,18 +11,18 @@
 
     <title>Suman Mandava | Portfolio</title>
     <meta charset="utf-8" />
-    <meta property="og:title" content="   Lokesh | Portfolio">
-    <meta name="keywords" content="   Lokesh, ,Code  ,Portfolio    Lokesh,Freelance website developer">
-    <meta property="og:description" content="Looking for a talented freelance website developer?    Lokesh has the skills and expertise you need to bring your website vision to life. With a wide range of skills including HTML, CSS, JavaScript, and React, as well as expertise in CMS systems like WordPress and Shopify, Contact   today to get started. Contact now today to get started on your web development project." name="description">
+    <meta property="og:title" content="   Suman | Portfolio">
+    <meta name="keywords" content="   Suman, Code  ,Portfolio    Suman,Freelance website developer">
+    <meta property="og:description" content="Looking for a talented freelance website developer?    Suman has the skills and expertise you need to bring your website vision to life. With a wide range of skills including HTML, CSS, JavaScript, and React, as well as expertise in CMS systems like WordPress and Shopify, Contact   today to get started. Contact now today to get started on your web development project." name="description">
     <meta property="og:image:type" content="image/jpg">
-    <meta property="og:image" content="Images/  Lokesh.jpg">
-    <meta name="image" property="og:image" content="Images/  Lokesh.jpg">
+    <meta property="og:image" content="Images/  suman.jpg">
+    <meta name="image" property="og:image" content="Images/  suman.jpg">
     <meta property="og:image:width" content="800">
     <meta property="og:image:height" content="600">
     <meta property="og:type" content="website">
     <meta property="og:type" content="article">
-    <!-- <meta property="article:author" content="https://  Lokesh.com/"> -->
-    <meta property="og:site_name" content="  Lokesh.com">
+    <!-- <meta property="article:author" content="https://  suman.com/"> -->
+    <meta property="og:site_name" content="  suman.com">
     <meta property="article:published_time" content="date_time">
     <meta property="og:locale" content="pt_BR">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
